# pulpocon23-dagster

./: .dockerignore  .editorconfig  .gitignore  Makefile  README copy.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
doc/: README.md
doc/chapter_1/: README.md
doc/chapter_2/: README.md
docker/: docker-compose.yaml
docker/dagster/: Dockerfile  dagster.yaml  workspace.yaml
docker/localstack/: init-s3.sh
docker/postgres/initdb.d/: create-dagster-metadata-db.sh  create-workshop-assets-db.sh
pulpocon23_dagster/chapter_1/: __init__.py  assets.py  configuration.py  input_output_types.py  io_managers.py  op_graph_job.py  partitions.py  resources.py
pulpocon23_dagster/chapter_2/: __init__.py
pulpocon23_dagster/chapter_2/assets/: __init__.py
pulpocon23_dagster/chapter_2/assets/solutions/: __init__.py  assignment_1.py  assignment_2.py  assignment_3.py  assignment_4.py  assignment_5.py  assignment_6.py
pulpocon23_dagster/chapter_2/cousins_assets/: __init__.py
pulpocon23_dagster/chapter_2/jobs/: test_postgres.py
pulpocon23_dagster/chapter_2/resources/: __init__.py  partitioned_numeric_time_series_postgres_io_manager.py  postgres_resource.py  s3_json_io_manager.py
pulpocon23_dagster/chapter_2/utils/: data_transformation.py  time_series_dao.py
pulpocon23_dagster/chapter_2_original/: __init__.py
pulpocon23_dagster/chapter_2_original/assets/: profit.py  stock.py
pulpocon23_dagster/chapter_2_original/jobs/: asset_jobs.py
pulpocon23_dagster/chapter_2_original/ops/: get_profit.py  get_stock.py
pulpocon23_dagster/chapter_2_original/utils/: codespace.py
scripts/: clean-env.sh
tests/chapter_1/: test_asset_with_config.py  test_graph.py  test_op.py
