[project.urls]
Homepage = "https://github.com/nextail/pulpocon23-dagster"

[project]
name = "pulpocon23_dagster"
dynamic = ["version"]
description = ""
authors = [{ name = "Nextail" }]
dependencies = [
    "dagster==1.4.11",
    "dagster-webserver",
    "dagster-postgres",
    "dagster-aws",
    "pandas==2.0.3"
]
requires-python = ">=3.10, <3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = ["pytest>=7.3.1"]
dev = [
    "debugpy==1.6.7",
    # linter and formatter
    "shandy-sqlfmt[jinjafmt]==0.19.0", # sql/dbt formatter
    "sqlfluff==2.1.1",                 # sql/dbt linter
    "sqlfluff-templater-dbt==2.1.1",
    "pre-commit==3.3.3",
    "black==23.3.0",                   # python formatter
    "ruff==v0.0.274",                  # python linter (flake8 compatible)
    "yamllint==1.32.0",                # yaml linter
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --ignore-glob=__pypackages__/** --ignore-glob=lib/__pypackages__/**"

[tool.pyright]
pythonVersion = "3.10"
exclude = ["**/__pycache__", "**/__pypackages__", "**/dbt_packages"]
ignore = ["**/__pypackages__", "**/dbt_packages"]
reportGeneralTypeIssues = false                                      # to allow working with dagster resources retrieved from context

[tool.black]
line-length = 120
target-version = ["py310"]
preview = true

[tool.isort]
profile = "black"
py_version = "310"
line_length = 120

[tool.ruff]
extend-exclude = ["__pypackages__"]
line-length = 120
target-version = "py310"
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "N",   # pep8-naming
    "E",   # Pycodestyle
    "W",   # Pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "RUF", # Ruff-specific rules
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"


[tool.sqlfmt]
line_length = 120
exclude = [
    "**/__pypackages__/**",
    "**/target/**",
    "**/dbt_packages/**",
    "**/test/tests/**",
    "**/test/macros/**",
    "**/macros/**",
]

[tool.sqlfluff.core]
ignore = "parsing, templating"
templater = "jinja"
dialect = "snowflake"
exclude_rules = "L003, L008, L011, L018, L029, L031, L036"

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.rules]
tab_space_size = 4
max_line_length = 120
indent_unit = "space"
capitalisation_policy = "lower"
extended_capitalisation_policy = "lower"

[tool.sqlfluff.layout.type.comma]
line_position = "trailing"

# unquoted identifiers
[tool.sqlfluff.rules.L014]
extended_capitalisation_policy = "lower"

# Statements must end with a semi-colon
[tool.sqlfluff.rules.L052]
multiline_newline = true
